--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,55 @@
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+
+  font-family: "symbols-sedona";
+  src: url("../fonts/symbols-sedona.woff") format("woff"),
+       url("../fonts/symbols-sedona.woff2") format("woff2");
+}
+
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
+  display: inline-block;
+  vertical-align: top;
+  width: 1em;
+  margin-right: 0.2em;
+  margin-left: 0.2em;
+
+  font-weight: normal;
+  line-height: 1em;
+  font-family: "symbols-sedona";
+  text-align: center;
+  text-transform: none;
+  text-decoration: inherit;
+  font-style: normal;
+  font-variant: normal;
+
+  speak: none;
+}
+
+.icon-facebook::before { content: "\66"; } /* "f" */
+.icon-twitter::before { content: "\74"; } /* "t" */
+.icon-up-dir::before { content: "\25b2"; } /* "▲" */
+.icon-down-dir::before { content: "\25bc"; } /* "▼" */
+.icon-star::before { content: "\2605"; } /* "★" */
+.icon-check-off::before { content: "\2610"; } /* "☐" */
+.icon-check-on::before { content: "\2611"; } /* "☑" */
+.icon-calendar::before { content: "\e800"; } /* "" */
+.icon-plus::before { content: "\e801"; } /* "" */
+.icon-minus::before { content: "\e802"; } /* "" */
+.icon-youtube::before { content: "\f39e"; } /* "" */
+
+.icon-check-on,
+.icon-check-off {
+  font-size: 28px;
+}
 body {
   font-size: 14px;
   line-height: 21px;
   color: #333333;
   text-transform: uppercase;
   font-weight: normal;
-  font-family: "PT Sans", sans-serif;
+  font-family: 'PT Sans', sans-serif;
 }
 h1 {
   font-size: 30px;
@@ -14,39 +59,80 @@ h1 {
 }
 h2 {
   font-size: 21px;
+  line-height: 1.2;
   color: #000000;
   font-weight: bold;
+}
+a {
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #000000;
 }
 main {
   width: 1200px;
   margin: 0 auto;
+  box-shadow: 0 0 30px 10px #dbdbdb;
 }
-header {
-  height: 56px;
-}
-ul{
+header ul {
   margin: 0px;
   padding: 0;
   list-style-type: none;
 }
 header li {
+  box-sizing: border-box;
   display: inline-block;
   vertical-align: top;
-  padding-top: 16px;
-  padding-bottom: 21px;
+  padding-top: 14px;
+  padding-bottom: 16px;
   width: 240px;
   text-align: center;
+}
+header a:hover {
+  color: #81b3d2;
+}
+header a:active {
+  color: #dddddd;
+}
+.active-page {
+  color: #b2a7a1;
+}
+.active-page:hover {
+  color: #9c9088;
+}
+.active-page:active {
+  color: #eeebea;
+}
+header li:nth-child(1) {
+  padding-right: 3px;
+  padding-top: 13px;
+}
+header li:nth-child(2) {
+  padding-left: 3px;
+  padding-top: 13px;
 }
 header li:nth-child(3) {
   padding-top: 0px;
   padding-bottom: 0px;
 }
+header li:nth-child(4) {
+padding-left: 1px;
+padding-top: 13px;
+}
+header li:nth-child(5) {
+padding-left: 17px;
+padding-top: 13px;
+}
 .head-pic {
   width: 1200px;
   height: 432px;
   padding-top: 76px;
+  margin-top: -22px;
   background: url("../img/main-picture.jpg") no-repeat;
+  background-color: #f2f2f2;
   background-size: cover;
+  line-height: 0;
 }
 .head-pic > img {
   display: block;
@@ -58,8 +144,11 @@ header li:nth-child(3) {
 }
 .head-caption {
   text-align: center;
-  padding-top: 47px;
-  padding-bottom: 57px;
+  padding-top: 42px;
+  padding-bottom: 40px;
+}
+.head-caption p {
+  padding-top: 14px;
 }
 .box {
   display: inline-block;
@@ -68,31 +157,62 @@ header li:nth-child(3) {
   width: 400px;
 }
 .box-white {
+  box-sizing: border-box;
+  display: inline-block;
+  vertical-align: top;
   padding-top: 60px;
-  padding-bottom: 78px;
+  padding-bottom: 82px;
   background-color: white;
 }
+.box-white:nth-child(2){
+  padding-top: 61px;
+}
+.box-white:nth-child(3){
+  padding-top: 56px;
+}
+.box-white h2 {
+  padding-top: 5px;
+}
+.box-white p {
+  padding-top: 4px;
+}
 .box-blue {
-  padding-top: 36px;
+  padding-top: 35px;
   color: white;
 }
+.box-blue p {
+  padding-top: 6px;
+}
 .box-grey {
-  padding-top: 30px;
-  padding-bottom: 57px;
+  padding-top: 26px;
+  padding-bottom: 47px;
   background-color: #eeeeee;
+}
+.box-grey h2 {
+  padding-top: 0px;
+}
+.box-grey p {
+  padding-top: 7px;
 }
 .box-wide {
   display: inline-block;
   vertical-align: top;
+  line-height: 0;
 }
 .box-wide img {
   width: 800px;
   height: 256px;
 }
-.tips, .benefits  {
-  margin-top: -5px;
+.devil-bridge {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: -14px;
 }
-.real-town, .devil-bridge {
+.devil-bridge p {
+  padding-top: 7px;
+}
+.real-town,
+.devil-bridge {
   background-color: #81b3d2;
 }
 .real-town h2,
@@ -103,40 +223,174 @@ header li:nth-child(3) {
 .interest {
   padding-top: 35px;
   text-align: center;
-  background-color:;
+}
+.interest p {
+  padding-top: 11px;
 }
 .hotels-search {
-  widht: 568px;
+  position: absolute;
 }
+
+
+/* Форма на главной ===================================================*/
+
+
 .body-form {
-  display: none;
+  position: relative;
+  text-align: left;
+  left: 316px;
   box-sizing: border-box;
   padding-top: 55px;
-  padding-left: 56px;
-  padding-right: 56px;
+  padding-left: 55px;
+  padding-right: 55px;
   width: 568px;
   height: 395px;
-  margin: 0 auto;
+  font-weight: bold;
+  background-color: white;
+  box-shadow: 0 10px 5px 3px #f2f2f2;
+}
+.body-form label {
+  display: inline-block;
+  margin-bottom: 15px;
+  white-space: nowrap;
+}
+.body-form input {
+  box-sizing: border-box;
+  width: 346px;
+  height: 38px;
+  margin-bottom: 14px;
+  margin-left: 21px;
+  padding-left: 10px;
+  padding-right: 42px;
+  background-color: #f2f2f2;
+  color: #000000;
+  border: none;
+  text-transform: uppercase;
+  font-style: inherit;
+}
+.body-form input:hover {
+  background-color: #ebebeb;
+}
+.body-form input[name="date-in"]:focus,
+.body-form input[name="date-out"]:focus {
+  background-color: white;
+  border: 2px solid #f5f5f5;
+}
+input[name="date-in"] {
+  margin-left: 21px;
+}
+input[name="date-out"] {
+  margin-left: 17px;
+}
+input[name="adults"] {
+  margin-top: 1px;
+  margin-left: 41px;
+  margin-right: 53px;
+  width: 114px;
+  padding: 0 38px;
+}
+input[name="childs"] {
+  margin-left: 26px;
+  width: 114px;
+  padding: 0 38px;
+}
+.body-form button {
+  position: absolute;
+  display: inline-block;
+  vertical-align: top;
+  margin: 0;
+  padding: 0;
+  width: 30px;
+  height: 38px;
+  background: transparent;
+  border: none;
+}
+button[name="minus-ad"] {
+  top: 195px;
+  left: 171px;
+}
+button[name="plus-ad"] {
+  top: 195px;
+  left: 247px;
+}
+button[name="minus-ch"] {
+  top: 195px;
+  left: 404px;
+}
+button[name="plus-ch"]  {
+  top: 195px;
+  left: 480px;
+}
+button[name="calendar-in"],
+button[name="calendar-out"] {
+  left: 479px;
+}
+.icon-calendar,
+.icon-minus,
+.icon-plus {
+  color: #b5b5b5;
+}
+.icon-calendar {
+  font-size: 21px;
+}
+button:hover .icon-calendar,
+button:hover .icon-minus,
+button:hover .icon-plus {
+  color: #000000;
+}
+button:active .icon-calendar,
+button:active .icon-minus,
+button:active .icon-plus {
+  color: #95bfd9;
 }
 .bottom-form {
-  display: none;
-  width: 350px;
+  position: absolute;
+  left: 371px;
+  width: 458px;
   height: 58px;
   margin: 0 auto;
+  margin-top: -113px;
+  font-style: inherit;
 }
 .interest a {
   display: inline-block;
   vertical-align: top;
   width: 568px;
-  margin-top: 50px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  margin-top: 39px;
+  padding-top: 13px;
+  padding-bottom: 13px;
   background-color: #766357;
 }
+.btn-form {
+  border: none;
+  width: 458px;
+  height: 58px;
+  margin: 0 auto;
+  padding: 0;
+  font-size: 21px;
+  text-transform: uppercase;
+  background-color: #81b3d2;
+  font-weight: bold;
+  color: #ffffff;
+}
+.btn-form:hover,
+.btn:hover {
+  background: #669ec0;
+}
+.btn-form:active,
+.btn:active {
+  background: #5496bd;
+  color: #84b0cd;
+}
+
+/* Конец формы ============================================*/
+
+
 .map{
   height: 593px;
   width: 1200px;
   background: url("../img/map.jpg") no-repeat;
+  line-height: 0;
 }
 .map iframe{
   border: 0;
@@ -145,88 +399,360 @@ header li:nth-child(3) {
 }
 footer {
   height: 120px;
-  text-align: center;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 .main-footer {
   position: absolute;
   margin-top: -120px;
   width: inherit;
 }
-.inner-footer {
-  margin-top: -6px;
+.hash {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 49px;
+  padding-left: 132px;
+  width: 268px;
 }
-.hash, .social-btn {
-  float: left;
-  padding-top: 49px;
-  width: 400px;
+.hash a {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: -4px;
+  margin-left: 1px;
+  font-size: 21px;
+}
+.social-btn {
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 124px;
+  width: 276px;
+  margin-top: 36px;
+}
+.btn {
+  box-sizing: border-box;
+  display:inline-block;
+  vertical-align: top;
+  padding-top: 14px;
+  padding-left: 9px;
+  width: 46px;
+  height: 48px;
+  background-color: #81b3d2;
+  margin-right: 3px;
+}
+.social-btn .btn:nth-child(3) {
+  margin-left: -1px;
+  padding-left: 7px;
+  padding-top: 12px;
+}
+.icon-twitter,
+.icon-facebook {
+  font-size: 20px;
+  color: #ffffff;
+}
+.icon-youtube {
+
+  font-size: 23px;
+  color: #ffffff;
+}
+.icon-twitter:active,
+.icon-facebook:active,
+.icon-facebook:active {
+  color: #84b0cd;
 }
 .made-by {
-  float: right;
+  display: inline-block;
+  vertical-align: top;
   padding-top: 49px;
-  width: 400px;
+  padding-left: 102px;
+  width: 298px;
 }
-.clearfix:after{
-    content:'';
-    display:table;
-    clear:both;
+.made-by span {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: -1px;
+  margin-right: 5px;
 }
+.made-by a {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: -7px;
+  margin-right: -5px;
+}
+.sprite-logo {
+  background: url("../img/sprite-logo.png") no-repeat;
+  background-position: -20px -20px;
+  width: 113px;
+  height: 39px;
+}
+.sprite-logo:hover {
+  background-position: -20px -99px;
+}
+.sprite-logo:active {
+  background-position: -20px -178px;
+}
+
+
 
 
 
 
 /*=======================Sedona-inner =====================*/
+
+
+
+
+
+
 .main-form {
+  box-sizing: border-box;
   width: 1200px;
-  min-height: 217px;
   background: url("../img/filter-background.jpg");
+  background-color: #35434c;
+  margin-top: -22px;
+  color: #ffffff;
 }
-.structure, .type-accomodation, .range {
+.structure,
+.type-accomodation {
   display: inline-block;
   vertical-align: top;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 11px;
+  padding-bottom: 9px;
+}
+
+/* Форма на внутренней чекбоксы============================*/
+
+.search h3 {
+  margin-left: 6px;
+  margin-bottom: 23px;
+}
+.search label {
+  display: inline-block;
+  vertical-align: top;
+  cursor: pointer;
 }
 .structure {
-  margin-left: 73px;
+  position: relative;
+  margin-left: 65px;
   width: 240px;
 }
-.type-accomodation {
-  width: 288px;
+.structure label:last-child {
+  margin-top: 2px;
 }
-.range {
-  width: 328x;
-  padding-left: 200px;
+.checkbox-off {
+  display: inline-block;
+  vertical-align: top;
+  margin-left: -2px;
+  margin-bottom: 17px;
+  padding-right: 5px;
 }
-.range input {
+.checkbox-on {
+  position: absolute;
+  display: none;
+}
+input[type="checkbox"]{
+  display: none;
+}
+input[type="checkbox"]:checked + .checkbox-on {
   display: inline-block;
   vertical-align: top;
 }
+.type-accomodation {
+  margin-left: 15px;
+  width: 288px;
+}
+.type-accomodation .checkbox-off {
+  margin-right: 3px;
+}
+.type-accomodation label:last-child {
+  margin-top: 1px;
+}
+
+.range {
+  display: inline-block;
+  vertical-align: top;
+  width: 318px;
+  margin-top: 28px;
+  padding-left: 202px;
+  text-transform: uppercase;
+}
+.filter-range-title {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: -1px;
+  margin-left: -9px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: bold;
+}
+.price-controls {
+  margin-bottom: 20px;
+  height: 32px;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+}
+.price-controls label {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: -4px;
+  font-size: 14px;
+  line-height: 38px;
+  cursor: pointer;
+}
+.price-controls input {
+  width: 50px;
+  margin: 0;
+  color: inherit;
+  font: inherit;
+  background: none;
+  border: none;
+  outline: none;
+}
+.price-controls::after {
+  content: "";
+  right: 589px;
+  top: 121px;
+  position: absolute;
+  width: 2px;
+  height: 22px;
+  background: #ffffff;
+}
+.price-controls .min-price {
+  width: 90px;
+  padding-left: 65px;
+}
+.price-controls .max-price {
+  width: 100px;
+  padding-left: 57px;
+}
+
+.range-controls {
+  position: relative;
+  margin-bottom: 32px;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: rgba(255, 255, 255, 0.3);
+}
+.range-controls .bar {
+  width: 80%;
+  height: 2px;
+  background: #ffffff;
+}
+.range-toggle {
+  position: absolute;
+  top: -9px;
+  width: 4px;
+  height: 4px;
+  background: #ababab;
+  border: 8px solid #ffffff;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  cursor: pointer;
+}
+.range-toggle-min {
+  left: 0;
+}
+.range-toggle-max {
+  left: 80%;
+}
+.range-toggle:hover {
+  background: #1c4f80;
+}
+.btn-transparent {
+  position: normal;
+  display: block;
+  margin-left: 85px;
+  padding: 5px 34px;
+  padding-right: 33px;
+  padding-bottom: 6px;
+  background: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+  outline: none;
+  text-transform: uppercase;
+}
+.btn-transparent:hover {
+  background: #ffffff;
+  color: #000000;
+}
+
+
+
+
+
+
 .structure label,
 .type-accomodation label {
   display: block;
 }
+
+/* Конец формы на внутренней =============================================*/
+
+
 .found-form {
+  box-sizing: border-box;
   margin: 0 auto;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 12px;
+  padding-bottom: 14px;
   width: 1056px;
 }
-.found, .sort, .triangles {
+.found,
+.sort,
+.triangles {
   display: inline-block;
   vertical-align: top;
+}
+.sort span {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 22px;
+  margin-left: -1px;
+  font-size: 12px;
+  font-weight: normal;
 }
 .sort ul {
   display: inline-block;
   vertical-align: top;
+  margin: 0px;
+  padding: 0;
+  margin-left: 35px;
+}
+.sort li {
+  margin-right: 30px;
+}
+.sort a {
+  font-size: 12px;
+  font-weight: normal;
+  color: #b5b5b5;
+  border-bottom: 1px dotted #81b3d2;
 }
 .sort ul li,
 .triangles ul li {
   display: inline-block;
   vertical-align: top;
 }
+.sort ul li {
+  margin-top: 20px;
+}
+.sort .active {
+  color: #81b3d2;
+  border: none;
+}
+.sort a:hover {
+  color: #81b3d2;
+}
+.sort a:active {
+  color: #000000;
+  border: none;
+}
 .found {
   width: 165px;
+}
+hr {
+  margin: 0;
+  padding: 0;
 }
 .sort {
   width: 780px;
@@ -235,37 +761,102 @@ footer {
   width: 111px;
   text-align: right;
 }
+.triangles ul {
+  margin-top: 21px;
+}
+.icon-up-dir,
+.icon-down-dir {
+  color: #d0d0d0;
+  font-size: 23px;
+}
+button[name="arrow-up"],
+button[name="arrow-down"] {
+  display: inline-block;
+  vertical-align: top;
+  padding: 0;
+  margin: 0;
+  border: none;
+  outline: none;
+  background: transparent;
+}
+button:hover .icon-up-dir,
+button:hover .icon-down-dir {
+  color: #000000;
+}
+button:active .icon-up-dir,
+button:active .icon-down-dir {
+  color: #81b3d2;
+}
+.active-arrow {
+  color: #81b3d2;
+}
 .index-block {
   margin: 0 auto;
   width: 1056px;
 }
-.index-block:nth-child(3n+2),
-.index-block:nth-child(3n+3) {
-  margin-top: -6px;
+.type h4,
+.min-cost h4 {
+  margin-bottom: 15px;
+  font-weight: normal;
+}
+.type a,
+.min-cost a {
+  padding: 4px 17px;
+  padding-right: 16px;
+  color: #ffffff;
+}
+.min-cost a {
+}
+.type a {
+  margin-right: 3px;
+  background-color: #81b3d2;
+}
+.type a:hover {
+  background-color: #669ec0;
+}
+.type a:active {
+  background-color: #5496bd;
+  color: #84b0cd;
+}
+.min-cost a {
+  background-color: #766357;
+}
+.min-cost a:hover {
+  background-color: #604e43;
+}
+.min-cost a:active {
+  background-color: #503e33;
 }
 .photo {
   display: inline-block;
   vertical-align: top;
-  text-align: left;
   width: 165px;
+  line-height: 0;
 }
 .photo img {
-  padding-top: 31px;
-  padding-bottom: 31px;
+  margin-top: 30px;
+  margin-bottom: 31px;
   width: 135px;
   height: 90px;
 }
 .name-block {
   display: inline-block;
   vertical-align: top;
-  margin-top: 31px;
+  margin-top: 24px;
   vertical-align: top;
   width: 780px;
 }
 .name-block h2 {
-  margin: 0px;
+  margin: 0;
 }
-.type, .min-cost {
+.name-block h2:hover {
+  color: #81b3d2;
+}
+.name-block h2:active {
+  color: #eeebea;
+}
+.type,
+.min-cost {
   display: inline-block;
   vertical-align: top;
   margin-top: -10px;
@@ -274,6 +865,21 @@ footer {
   display: inline-block;
   vertical-align: top;
   margin-top: 30px;
-  width: 111px;
+  margin-left: -1px;
+  width: 110px;
   text-align: right;
+}
+.rating {
+  display: inline-block;
+  vertical-align: top;
+  margin-left: -1px;
+  margin-top: 41px;
+  padding: 3px 17px;
+  padding-right: 10px;
+  background-color: #f2f2f2;
+  white-space: nowrap;
+}
+.icon-star {
+  color: #81b3d2;
+  font-size: 19px;
 }
