--- a/css/style.css
+++ b/css/style.css
@@ -873,6 +873,9 @@ button[name="arrow-up"]:active .no-active {
 hr {
   margin: 0;
   padding: 0;
+  height: 1px;
+  border: 0;
+  background-color: #e5e5e5;
 }
 .photo {
   display: inline-block;
