--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
   color: #333333;
   text-transform: uppercase;
   font-weight: normal;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 h1 {
   font-size: 30px;
